XMLExper/m12/m12_123_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLNode* tinyxml2::XMLNode::DeepClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:883:105: error: cannot dynamic_cast ‘child’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLElement*’ (conversion casts away constness)
  883 |  for (const XMLNode* child = this->FirstChild(); child; /*PCI*/dynamic_cast<tinyxml2::XMLElement*>(child) = child->NextSibling()) {
      |                                                                                                         ^
diff: tinyxml2.o: No such file or directory
